# Robocon_2022_CV_R1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  robo.cpp  robo.hpp  robo_data.h  robo_utils.hpp  utils.hpp
Camera/: CMakeLists.txt  mv_video_capture.cpp  mv_video_capture.hpp
OpenVINO/: ovdetector.hpp  ovyolov5.cpp  ovyolov5.h
TensorRTx/: common.cpp  common.h  trtdetector.hpp  yolov5.hpp
angle/prediction/: kalman.hpp  kalman_prediction.hpp
angle/solvePnP/: CMakeLists.txt  solvePnP.hpp
angle_solve/: CMakeLists.txt  abstract_pnp.hpp  basic_pnp.cpp  basic_pnp.hpp
configs/: basic_pnp_config.xml  camera_273.xml  camera_param.yaml  pnp_config.xml  robo_config.json  uart_serial_config.xml
devices/camera/: mv_video_capture.cpp  mv_video_capture.hpp
devices/new_serial/: serial.cpp  serial.hpp
devices/new_serial/src/impl/: unix.cc
devices/serial/: CMakeLists.txt  uart_serial.cpp  uart_serial.hpp
log/: log.hpp  rqt_watcher.hpp
serial/: uart_serial.cpp  uart_serial.hpp
streamer/: mjpeg_streamer.hpp  streamer.html  streamer_impl.hpp
utils/: streamer.html
